[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
laminar-config = { path = "../../crates/laminar-config" }
laminar-telemetry = { path = "../../crates/laminar-telemetry" }
