[package]
name = "laminar-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

laminar-config = { path = "../laminar-config" }

redis = { version = "0.28", default-features = false, features = ["tokio-comp"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "json"] }
